<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_booking_title"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/confirm_booking_message"
        android:textColor="#666666"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnLater"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#F0F9F7"
            android:text="@string/later"
            android:textAllCaps="false"
            android:textColor="#00B087"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="#00B087"
            android:text="@string/confirm_booking_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>